@@ -1,3 +1,9 @@
+2008-09-29  Christian Persch  <chpe@gnome.org>
+
+        Bug 554224 – format not a string literal and no format arguments
+
+        * browser-plugin/totem-plugin-viewer.c: Use %s to printf a string.
+
 2008-09-29  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/README.browser-plugin: Fix typo spotted
